--- a/popup.css
+++ b/popup.css
@@ -46,7 +46,7 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.50);
     background-color: rgb(162, 204, 243);
     font-family: 'Poppins', sans-serif;
-    padding: 2rem;
+    padding: 2rem 3rem;
 }
 
 .popup--telegram img{
@@ -141,8 +141,9 @@
         width: 32%;
     }
 
-    .popup h1{
-        font-size: 2.1rem;
+    .popup-telegram h1{
+        font-size: 2rem;
+        line-height: 2.2rem;
     }
     
     .popup h2{
