--- a/popup.css
+++ b/popup.css
@@ -46,7 +46,21 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.50);
     background-color: rgb(162, 204, 243);
     font-family: 'Poppins', sans-serif;
-    padding: 2rem 3rem;
+    padding: 2rem 2.5rem;
+}
+
+.close_button_container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.close_button_container .close_button{
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 1.4rem;
 }
 
 .popup--telegram img{
