--- a/popup.css
+++ b/popup.css
@@ -44,7 +44,6 @@
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.50);
-    background-color: rgb(162, 204, 243);
     font-family: 'Poppins', sans-serif;
     padding: 2rem 2.5rem;
 }
@@ -63,6 +62,10 @@
     font-size: 1.4rem;
 }
 
+.active{
+    display: flex;
+}
+
 .popup--telegram img{
     width: 220px;
 }
@@ -70,7 +73,7 @@
 
 .popup--telegram h1{
     font-size: 1.65rem;
-    color: rgb(15, 61, 107);
+    color: #014A0C;
     font-weight: 800;
     line-height: 2.05rem;
     letter-spacing: -1px;
@@ -80,7 +83,7 @@
 
 .popup--telegram h2{
     font-size: 1.35rem;
-    color: rgb(12, 11, 117);
+    color: #014A0C;
     font-size: 1rem;
     font-style: normal;
     font-weight: 400;
@@ -96,7 +99,7 @@
 }
 
 .popup__unirse{
-    background: rgb(15, 61, 107);
+    background: #014A0C;;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.50);
     font-weight: 600;
     width: 240px;
@@ -110,7 +113,7 @@
     transition: background 0.3s linear;
 }
 .popup__unirse:hover{
-    background: rgb(28, 116, 204);
+    background: #0C941F;
     color: #fff;
 }
 
@@ -125,6 +128,10 @@
     margin-top: 35px;
 }
 
+.close_button:hover{
+    color: #000;
+    transition: color 0.3s ease;
+}
 
 
 @media screen and (min-width: 700px){
