--- a/popup.css
+++ b/popup.css
@@ -529,16 +529,19 @@ body {
         font-size: 1.3em;
         margin-top: 20px;
     }
+    .popup-right-info p {
+        margin-top: 2px;
+    }
     .discount-percent {
         margin: 10px 0;
     }
 
     .discount-percent .percentage {
-        font-size: 2.6em;
+        font-size: 2.45em;
     }
 
     .discount-percent .text {
-        font-size: 1.12em;
+        font-size: 1.06em;
     }
 
     .next-order {
