--- a/popup.css
+++ b/popup.css
@@ -39,7 +39,7 @@ body {
 
 .btn_cross {
     position: absolute;
-    top: -45px;
+    top: -40px;
     right: 0px; /* Ajusta la posición para que no se superponga con el botón de Telegram */
     cursor: pointer;
     z-index: 1001; /* Asegura que el botón esté por encima de otros elementos */
@@ -52,9 +52,9 @@ body {
     box-shadow: 0 4px 10px #0b1b0c;
     cursor: pointer;
     transition: all 0.3s ease;
-    width: 40px;
-    height: 40px;
-    font-size: 20px; /* Tamaño de la X */
+    width: 36px;
+    height: 36px;
+    font-size: 13px; /* Tamaño de la X */
     color: white; /* Color de la X */
 }   
 /* Estilos del overlay del popup */
@@ -480,7 +480,7 @@ body {
 @media (max-width: 768px) {
     .telegram-popup-container {
         max-width: 95%;
-        transform: translateY(-40px);
+        transform: translateY(-2vh);
         border: none; /* Quitar borde en móviles si es muy ancho */
     }
 
