--- a/popup.css
+++ b/popup.css
@@ -39,8 +39,8 @@ body {
 
 .btn_cross {
     position: absolute;
-    top: -40px;
-    right: 0px; /* Ajusta la posición para que no se superponga con el botón de Telegram */
+    top: 7px;
+    right: 9px; /* Ajusta la posición para que no se superponga con el botón de Telegram */
     cursor: pointer;
     z-index: 1001; /* Asegura que el botón esté por encima de otros elementos */
 }
@@ -49,11 +49,11 @@ body {
     border: none;
     border-radius: 50%;
     padding: 10px;
-    box-shadow: 0 4px 10px #0b1b0c;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     cursor: pointer;
     transition: all 0.3s ease;
-    width: 30px;
-    height: 30px;
+    width: 32px;
+    height: 32px;
     font-size: 13px; /* Tamaño de la X */
     color: white; /* Color de la X */
 }   
